Add main content: d3 to create and position circles, handlebars template to lay out the profiles

--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -13,8 +13,8 @@
 
 ////////////////////////////////////////////////////////////////////////
 // FINANCIER TEXT
-// @include oFontsInclude(FinancierTextWeb, $weight: regular, $style: normal);
-// @include oFontsInclude(FinancierTextWeb, $weight: regular, $style: italic);
+@include oFontsInclude(FinancierTextWeb, $weight: regular, $style: normal);
+@include oFontsInclude(FinancierTextWeb, $weight: regular, $style: italic);
 
 ////////////////////////////////////////////////////////////////////////
 // FINANCIER DISPLAY
