--- a/client/templates/main.hbs
+++ b/client/templates/main.hbs
@@ -10,6 +10,9 @@
 		<div class="footnote">{{options.note}}</div>
 		<div class="uni-name"></div>
 	</div>
+	<div class="back-to-top" data-o-grid-colspan="12 center">
+		<a href="#"><button class="o-buttons o-buttons--uncolored o-buttons--big">Back to top</button></a>
+	</div>
 	<div class="notes" data-o-grid-colspan="12 M10 L8 XL6 center">
 		<div class="methodology">{{options.note}}</div>
 	</div>
