--- a/client/templates/main.hbs
+++ b/client/templates/main.hbs
@@ -2,14 +2,15 @@
 	<div class="intro" data-o-grid-colspan="12 M10 L8 center">
 		<h1>{{options.title}}</h1>
 		<p>{{options.intro}}</p>
+	</div>
+	<div class="container" data-o-grid-colspan="12 M10 L8 center">
 		<h4>{{options.subtitle}}</h4>
+		<div class="instruction">{{options.instruction}}</div>
 	</div>
-	<div class="container" data-o-grid-colspan="12 M10 L8 center"></div>
-		
-	<div class="bios" data-o-grid-colspan="12 center">
+	<div class="notes" data-o-grid-colspan="12 M10 L8 center">
 		<div class="footnote">{{options.note}}</div>
-		<div class="uni-name"></div>
 	</div>
+	<div class="bios" data-o-grid-colspan="12 center"></div>
 	<div class="back-to-top" data-o-grid-colspan="12 center">
 		<a href="#"><button class="o-buttons o-buttons--uncolored o-buttons--big">Back to top</button></a>
 	</div>
