--- a/client/templates/ceo_card.hbs
+++ b/client/templates/ceo_card.hbs
@@ -5,7 +5,7 @@
   <div class="card-holder {{groups}}" data-o-grid-colspan="12 M8 L6 center">
     <div class="card">
     <div class="ceo-name">{{profile.firstname}} {{profile.lastname}}</div>
-    <div class="key-facts">Graduated MBA in {{profile.graduated}}, became {{profile.title}} of <span style="font-weight:bold">{{profile.company}}</span> ({{profile.nationality}}) in {{profile.startdate}}</div>
+    <div class="key-facts">Graduated MBA in {{profile.graduated}}, became {{profile.title}} of <span class="company">{{profile.company}}</span> ({{profile.nationality}}) in {{profile.startdate}}</div>
 
     {{#if imageurl}}
     <div class="main-profile">
