--- a/client/templates/main.hbs
+++ b/client/templates/main.hbs
@@ -2,6 +2,27 @@
 	<div class="intro" data-o-grid-colspan="12 M10 L8 center">
 		<h1>{{options.title}}</h1>
 		<p>{{options.intro}}</p>
+		<h6>By {{{options.credits}}}</h6>
+		<div class="share-links-holder">
+		  <div class="share-links">
+		    <ul>
+		      <li>
+		        <a class="share-links__link share-links__link--twitter" target="_blank" href="https://twitter.com/home?status=Discover where MBA graduates who are currently chief executive of an FT500 company went to business school https://ig.ft.com/sites/mba-to-ceo/">
+		          <span>Twitter</span>
+		        </a>
+		      </li>
+		      <li><a class="share-links__link share-links__link--facebook" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://ig.ft.com/sites/mba-to-ceo/">
+		        <span>Facebook</span>
+		        </a>
+		      </li>
+		      <li>
+		        <a class="share-links__link share-links__link--linked-in" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://ig.ft.com/sites/mba-to-ceo/&amp;title=Discover where MBA graduates who are currently chief executive of an FT500 company went to business school&amp;source=FT.com">
+		          <span>LinkedIn</span>
+		        </a>
+		      </li>
+		    </ul>
+		  </div>
+		</div>
 	</div>
 	<div class="container" data-o-grid-colspan="12 M10 L8 center">
 		<h4>{{options.subtitle}}</h4>
