--- a/client/templates/ceo_card.hbs
+++ b/client/templates/ceo_card.hbs
@@ -4,15 +4,16 @@
 {{#each .}}
   <div class="card-holder {{groups}}" data-o-grid-colspan="12 M8 L6 center">
     <div class="card">
-    <div class="ceo-name">{{profile.firstname}} {{profile.lastname}}</div>
-    <div class="key-facts">Graduated MBA in {{profile.graduated}}, became {{profile.title}} of <span class="company">{{profile.company}}</span> ({{profile.nationality}}) in {{profile.startdate}}</div>
+      <div class="uni-small">{{profile.school}}</div>
+      <div class="ceo-name">{{profile.firstname}} {{profile.lastname}}</div>
+      <div class="key-facts">Graduated MBA in {{profile.graduated}}, became {{profile.title}} of <span class="company">{{profile.company}}</span> ({{profile.nationality}}) in {{profile.startdate}}</div>
 
-    {{#if imageurl}}
-    <div class="main-profile">
-        <div class="headshot"><img src="https://ig.ft.com/static/sites/2016/ceo-mba-2016/{{imageurl}}" /></div>
-        <div class="body-text">{{profile.body}}</div>
-    </div>
-    {{/if}}
+      {{#if imageurl}}
+      <div class="main-profile">
+          <div class="headshot"><img src="https://ig.ft.com/static/sites/2016/ceo-mba-2016/{{imageurl}}" /></div>
+          <div class="body-text">{{profile.body}}</div>
+      </div>
+      {{/if}}
     </div>
   </div>
 {{/each}}
